--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  cloud_firestore: ^4.5.3
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter:
