--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   cloud_firestore: ^4.5.3
+  encrypt: ^5.0.1
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
   flutter:
