--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   encrypt: ^5.0.1
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
+  firebase_core_desktop: ^1.0.2
   flutter:
     sdk: flutter
 
