--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,19 @@ dependencies:
 #  firebase_auth: ^4.17.6
 #  firebase_core: ^2.25.5
 #  firebase_core_desktop: ^1.0.2
-  cloud_firestore: ^4.15.6
+
+#  cloud_firestore: ^4.15.6
+#  crypto: ^3.0.3
+#  encrypt: ^5.0.3
+#  firebase_auth: ^4.17.6
+#  firebase_auth_web: ^5.9.6
+#  firebase_core: ^2.28.0
+#  firebase_core_web: ^2.11.5
+  cloud_firestore: ^4.5.3
   crypto: ^3.0.3
-  encrypt: ^5.0.3
-  firebase_auth: ^4.17.6
-  firebase_auth_web: ^5.9.6
-  firebase_core: ^2.28.0
-  firebase_core_web: ^2.11.5
+  encrypt: ^5.0.1
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
   flutter:
     sdk: flutter
 
